[gd_scene load_steps=3 format=3 uid="uid://b8cqeehc8rdgt"]

[ext_resource type="Script" uid="uid://dgkphx4vlus0o" path="res://scripts/menus/option_menu.gd" id="1_hxiae"]
[ext_resource type="Theme" uid="uid://cj661i3baqy8q" path="res://themes/level_button.tres" id="2_l1ks6"]

[node name="FinishedLevelMenu" type="CanvasLayer"]
script = ExtResource("1_hxiae")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 500
theme_override_constants/margin_top = 280
theme_override_constants/margin_right = 500
theme_override_constants/margin_bottom = 280

[node name="Panel" type="Panel" parent="MarginContainer"]
layout_mode = 2
theme = ExtResource("2_l1ks6")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/margin_left = 230
theme_override_constants/margin_right = 230

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_l1ks6")
theme_override_constants/outline_size = 16
theme_override_font_sizes/font_size = 96
text = "Options"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/MarginContainer/VBoxContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme_override_constants/separation = 10

[node name="BackButton" type="Button" parent="MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_l1ks6")
text = "Back"

[node name="ControlsButton" type="Button" parent="MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_l1ks6")
text = "Controls"

[node name="AudioButton" type="Button" parent="MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_l1ks6")
text = "Audio"

[connection signal="pressed" from="MarginContainer/MarginContainer/VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="MarginContainer/MarginContainer/VBoxContainer/ControlsButton" to="." method="_on_controls_button_pressed"]
[connection signal="pressed" from="MarginContainer/MarginContainer/VBoxContainer/AudioButton" to="." method="_on_audio_button_pressed"]
